build_output2.txt
> Task :cleanGenerateJte
> Task :cleanPrecompileJte UP-TO-DATE
> Task :clean
> Task :generateJte

> Task :compileJava
C:\Development\Owner\CarMoneyPit\build\generated-sources\jte\gg\jte\generated\precompiled\Jtepseo_landingGenerated.java:145: error: cannot find symbol
				var __jte_html_attribute_0 = ctaUrl;
				                             ^
  symbol: variable ctaUrl
C:\Development\Owner\CarMoneyPit\build\generated-sources\jte\gg\jte\generated\precompiled\Jtepseo_landingGenerated.java:155: error: cannot find symbol
				if (relatedFaults != null && !relatedFaults.isEmpty()) {
				    ^
  symbol: variable relatedFaults
C:\Development\Owner\CarMoneyPit\build\generated-sources\jte\gg\jte\generated\precompiled\Jtepseo_landingGenerated.java:155: error: cannot find symbol
				if (relatedFaults != null && !relatedFaults.isEmpty()) {
				                              ^
  symbol: variable relatedFaults
C:\Development\Owner\CarMoneyPit\build\generated-sources\jte\gg\jte\generated\precompiled\Jtepseo_landingGenerated.java:163: error: cannot find symbol
					for (var related : relatedFaults) {
					                   ^
  symbol: variable relatedFaults
4 errors

> Task :compileJava FAILED

[Incubating] Problems report is available at: file:///C:/Development/Owner/CarMoneyPit/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  C:\Development\Owner\CarMoneyPit\build\generated-sources\jte\gg\jte\generated\precompiled\Jtepseo_landingGenerated.java:145: error: cannot find symbol
  				var __jte_html_attribute_0 = ctaUrl;
  				                             ^
    symbol: variable ctaUrl
  4 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.14.3/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 4s
5 actionable tasks: 4 executed, 1 up-to-date
